fix: Resolve Checkstyle violations in test files
Fixed all code quality violations in test suite to comply with Google Java Style: